--- a/styles/colors-light.css
+++ b/styles/colors-light.css
@@ -42,9 +42,9 @@ header h2 {
 }
 
 #projects {
-  background-color: #15995799;
+  background-color: #00d24899;
 }
 
 #projects h2 {
-  color: #00ff80;
+  color: #006c2a;
 }
